Resolved issue with pagination buttons overlapping the footer

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -5,6 +5,7 @@
   height: 30px;
   border: black 1px solid;
   background-color: rgb(255, 255, 255, 0.9);
+  z-index: 3;
 }
 
 .footer-link {
